- Add support for [aspnet-client-validation](https://www.npmjs.com/package/aspnet-client-validation) library.
- Refactoring (and renaming) JavaScripts files.
- Add support for *IClientModelValidator* while procesing *Operands* in *predicate* validators. This will increase the number of *ValidationAttribute* available in client-side for predicates.