@@ -97,12 +97,6 @@ namespace FoolProof.Core.Tests.E2eTests
 
         protected override string DataType => "Single";
 
-        [CustomTestMethod("Empty Values : Invalid")]
-        public override async Task EmptyValues()
-        {
-            await EmptyValues(false);
-        }
-
         protected override TestValues GetValues2PassValidation()
         {
             return new(
