@@ -12,31 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.aspnet-validation.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.aspnet-validation.unobtrusive.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.core.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
     <Content Update="wwwroot\lib\foolproof-validation\foolproof.jquery.unobtrusive.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.jquery.validation.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.jquery.validation.unobtrusive.js">
-      <PackagePath>contentFiles\Scripts\</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-    <Content Update="wwwroot\lib\foolproof-validation\foolproof.validators.js">
       <PackagePath>contentFiles\Scripts\</PackagePath>
       <Pack>true</Pack>
     </Content>
@@ -61,5 +37,13 @@
       <Pack>true</Pack>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\foolproof-validation\" />
+  </ItemGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="echo Coping JavaSript files...&#xD;&#xA;xcopy /S /Y &quot;$(ProjectDir)..\FoolProof.Core\Scripts\*&quot; &quot;$(ProjectDir)wwwroot\lib\foolproof-validation&quot;" />
+  </Target>
 
 </Project>
